syntax = "proto3";
package lobby;

//클라 -> 서버 : 로비 입장 요청
message C2S_EnterLobby {
	string user_id = 1;
}

//서버 -> 클라 : 로비 입장 응답

message S2C_EnterLobby{
	bool success = 1;
	string message = 2;
}

//서버 -> 클라 : 로비 유저 리스트 갱신

message S2C_LobbyUserList{
	repeated string users = 1; //현재 로비에 있는 유저 ID 목록
}

//클라 -> 서버 : 게임 시작 요청
message C2S_GameStart{
	string user_id = 1; //게임 시작 요청한 유저 ID
}

//서버 -> 클라 : 게임 시작 응답
message S2C_GameStart{
	bool success = 1; //게임 시작 성공 여부
	string room_id =2; //성공 시 생성/참여할 방 ID
	string message = 3; //응답 결과에 따른 메시지
}